# rsdns

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  fuzz.yml
bench/: Cargo.toml
bench/benches/: rrset.rs
ch4/: Cargo.toml  Makefile.toml  build.rs
ch4/src/: args.rs  main.rs  output.rs  win.rs
ch4/templates/: main_template.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rrset_from_msg.rs
rsdns/: Cargo.toml  build.rs
rsdns/src/: character_string.rs  error.rs  errors.rs  header.rs  lib.rs  question.rs
rsdns/src/bytes/: cursor.rs  macros.rs  reader.rs  wcursor.rs  writer.rs
rsdns/src/constants/: message_section.rs  mod.rs  opcode.rs  qclass.rs  qtype.rs  rclass.rs  rcode.rs  records_section.rs  response_code.rs  rtype.rs  section.rs
rsdns/src/domain_name/: builder.rs  inline_name.rs  mod.rs  name.rs  name_arr.rs  name_contract.rs  name_string.rs  reader.rs  utils.rs  writer.rs
rsdns/src/message/: answer.rs  character_string.rs  flags.rs  header.rs  message_type.rs  mod.rs  parsed_opcode.rs  parsed_rcode.rs  parsed_response_code.rs  query_writer.rs  question.rs  record_class.rs  response_code.rs
rsdns/src/message/reader/: message_reader.rs  mod.rs  questions.rs  record_header.rs  records.rs  records_reader.rs  section_tracker.rs
rsdns/src/net/: mod.rs
rsdns/src/net/async_std/: mod.rs
rsdns/src/net/conf/: mod.rs  protocol_strategy.rs  recursion.rs  resolver_conf.rs
rsdns/src/net/std/: resolver_impl.rs
rsdns/src/protocol/: character_string.rs  domain_name.rs  flags.rs  header.rs  macros.rs  mod.rs  question.rs  resource_record.rs
rsdns/src/protocol/bytes/: bytes.rs  cursor.rs  mod.rs  reader.rs  wcursor.rs
rsdns/src/protocol/constants/: mod.rs  opcode.rs  qclass.rs  qtype.rs  rclass.rs  rcode.rs  response_code.rs  rrclass.rs  rrtype.rs  rtype.rs  section.rs
rsdns/src/protocol/domain_name/: builder.rs  mod.rs  name.rs  name_string.rs  reader.rs  writer.rs
rsdns/src/protocol/message/: bytes.rs  bytes_reader.rs  cursor.rs  domain_name_reader.rs  message_reader.rs  mod.rs  query_writer.rs  questions_reader.rs  wcursor.rs
rsdns/src/protocol/message/reader/: domain_name_reader.rs  message_reader.rs  mod.rs  questions.rs  questions_reader.rs
rsdns/src/records/: macros.rs  mod.rs  rfc1035.rs  rfc3596.rs
rsdns/src/records/data/: macros.rs  mod.rs  rfc1035.rs  rfc3596.rs
rsdns/src/resolvers/: answer.rs  mod.rs
rsdns/src/resolvers/conf/: mod.rs  resolver_conf.rs
rsdns/src/resolvers/config/: mod.rs  protocol_strategy.rs  resolver_conf.rs  resolver_config.rs
rsdns/src/resolvers/smol/: mod.rs
rsdns/src/resolvers/std/: resolver_impl.rs
rsdns/src/resolvers/tokio/: mod.rs
rsdns/templates/: async_resolver_impl.rs  resolver.rs  resolver.rs.j2
src/: errors.rs  lib.rs  macros.rs
src/bytes/: cursor.rs  macros.rs  mod.rs  reader.rs  wcursor.rs  writer.rs
src/clients/: mod.rs
src/clients/async_std/: mod.rs
src/clients/config/: client_config.rs  edns.rs  mod.rs  protocol_strategy.rs
src/clients/smol/: mod.rs
src/clients/std/: client_impl.rs  mod.rs
src/clients/tokio/: mod.rs
src/constants/: class.rs  mod.rs  opcode.rs  qtype.rs  rclass.rs  rcode.rs  records_section.rs  records_sections.rs  rtype.rs  type.rs
src/domain_name/: inline_name.rs  mod.rs  name.rs  name_contract.rs  reader.rs  utils.rs  writer.rs
src/message/: answer.rs  character_string.rs  class_value.rs  flags.rs  header.rs  message_type.rs  mod.rs  opcode.rs  opcode_value.rs  operation_code.rs  query_class.rs  query_type.rs  query_writer.rs  question.rs  rcode.rs  rcode_value.rs  record_class.rs  record_type.rs  records_section.rs  response_code.rs  type_value.rs
src/message/reader/: labels.rs  message_iterator.rs  message_reader.rs  mod.rs  name_ref.rs  question_ref.rs  questions.rs  records.rs  section_tracker.rs
src/message/reader/labels/: label.rs  label_ref.rs  macros.rs  test_labels.rs
src/message/reader/message_reader/: macros.rs  mod.rs  reader.rs  record_header.rs  record_header_ref.rs  record_marker.rs  record_offset.rs  test_message_reader.rs  test_records_reader.rs
src/message/reader/records_reader/: reader.rs  record_header.rs  record_header_ref.rs  test_records_reader.rs
src/names/: dname.rs  inline_name.rs  mod.rs  name.rs  reader.rs  utils.rs  writer.rs
src/records/: class.rs  mod.rs  opt.rs  record.rs  record_set.rs  type.rs
src/records/data/: macros.rs  mod.rs  rdata.rs  rfc1035.rs  rfc2782.rs  rfc3596.rs  rfc6844.rs
src/resolvers/: mod.rs
src/resolvers/config/: mod.rs  protocol_strategy.rs  resolver_config.rs  uni.rs  win.rs
src/resolvers/std/: mod.rs  resolver_impl.rs
templates/: async_client_impl.rs  async_resolver_impl.rs  client.rs  resolver.rs
tests/: test_partial_eq.rs  test_query_rrset.rs
