[package]
name = "rsdns"
version = "0.13.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "DNS Client Library"
license = "MIT OR Apache-2.0"
keywords = ["dns", "dig", "async", "resolver"]
categories = ["asynchronous", "network-programming", "parser-implementations"]
repository = "https://github.com/r-bk/rsdns"
exclude = [".git*", "Makefile.toml"]

[dependencies]
thiserror = "1.0.26"
arrayvec = "0.7.1"
rand = "0.8.4"
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.4.1", optional = true, features = ["all"] }

[features]
default = []
net-std = []
net-tokio = ["tokio"]
net-async-std = ["async-std"]
net-smol = ["smol", "smol-timeout"]

[dependencies.tokio]
version = "^1"
optional = true
default-features = false
features = ["rt", "net", "time", "io-util"]

[dependencies.async-std]
version = "^1"
optional = true

[dependencies.smol]
version = "^1"
optional = true

[dependencies.smol-timeout]
version = "0.6.0"
optional = true

[build-dependencies]
tera = { version = "1.16.0", default-features = false }

[dev-dependencies]
async-std = { version = "^1", features = ["attributes"] }
tokio = { version = "^1", features = ["macros"] }
smol-potat = "1.1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
