[package]
name = "rsdns"
version = "0.19.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "DNS Client Library"
license = "MIT OR Apache-2.0"
keywords = ["dns", "dig", "async", "resolver"]
categories = ["asynchronous", "network-programming", "parser-implementations"]
repository = "https://github.com/r-bk/rsdns"
exclude = [".git*", "Makefile.toml"]

[dependencies]
thiserror = "1.0.26"
arrayvec = "0.7.1"
rand = "0.8.4"
cfg-if = "1.0.0"
tokio = { version = "1", optional = true, default-features = false, features = [
    "rt",
    "net",
    "time",
    "io-util",
] }
async-std = { version = "1", optional = true }
smol = { version = "2", optional = true }
smol-timeout = { version = "0.6.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.5.1", optional = true, features = ["all"] }

[features]
default = []
net-std = []
net-tokio = ["dep:tokio"]
net-async-std = ["dep:async-std"]
net-smol = ["dep:smol", "dep:smol-timeout"]
socket2 = ["dep:socket2"]

[build-dependencies]
tera = "1.18.1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
tokio = { version = "1", features = ["macros"] }
smol-potat = "1.1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "bench"]
