[package]
name = "ch4"
version = "0.1.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2018"
description = "DNS Stub Resolver CLI"
license-file = "../LICENSE"
keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/r-bk/rsdns"

[features]
default = ["net-tokio"]
net-std = ["rsdns/net-std"]
net-tokio = ["rsdns/net-tokio", "tokio"]
net-async-std = ["rsdns/net-async-std", "async-std"]
net-smol = ["rsdns/net-smol", "smol"]
socket2 = ["rsdns/socket2"]

[dependencies.rsdns]
version = "0.1.0"
path = "../rsdns"
default-features = false

[dependencies]
cfg-if = "1.0.0"
anyhow = "1.0.40"
structopt = "0.3"
chrono = "0.4.19"
tokio = { version = "1", optional = true, features = ["rt", "macros"]}
async-std = { version = "1", optional = true, features = ["attributes"] }
smol = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = "0.9.1"

[build-dependencies]
built = { version = "0.4.4", features = ["git2", "chrono"] }
vergen = { version = "5.1.1", default-features = false, features = ["rustc", "si"] }
tera = { version = "1.7.0", default-features = false }

[target.'cfg(windows)'.build-dependencies]
windows = "0.9.1"
