[package]
name = "rsdns"
version = "0.1.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2018"
description = "DNS client in Rust"
license-file = "../LICENSE"
keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
categories = ["asynchronous", "network-programming", "parser-implementations"]
homepage = "https://github.com/r-bk/rsdns"
repository = "https://github.com/r-bk/rsdns"

[features]
default = ["net-std"]
net-std = []
net-tokio = ["tokio/rt", "tokio/net"]
net-async-std = ["async-std"]
net-smol = ["smol"]

[dependencies]
thiserror = "1.0"
strum = "0.20"
strum_macros = "0.20"
arrayvec = { version = "0.5", features = ["array-sizes-129-255"] }

tokio = { version = "^1", optional = true }
async-std  = { version = "^1", optional = true }
smol = { version = "^1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
