[package]
name = "rsdns"
version = "0.1.0"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2018"
description = "DNS Client Library"
license-file = "../LICENSE"
keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
categories = ["asynchronous", "network-programming", "parser-implementations"]
homepage = "https://github.com/r-bk/rsdns"
repository = "https://github.com/r-bk/rsdns"

[dependencies]
thiserror = "1.0"
strum = "0.20"
strum_macros = "0.20"
arrayvec = { version = "0.5", features = ["array-sizes-129-255"] }
rand = "0.8"

[features]
default = []
net-tokio = ["tokio"]
net-async-std = ["async-std"]
net-smol = ["smol", "smol-timeout"]

[dependencies.tokio]
version = "^1"
optional = true
default-features = false
features = ["rt", "net", "time"]

[dependencies.async-std]
version = "^1"
optional = true

[dependencies.smol]
version = "^1"
optional = true

[dependencies.smol-timeout]
version = "0.6"
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
